--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ env:
 go:
   - 1.13.x
 
+before_script:
+  - GO111MODULE=off go get -u golang.org/x/lint/golint
+
 script:
-  - make test
+  - make ci
 
 # Calls goreleaser to build and push artifacts
 deploy:
